@@ -570,7 +570,7 @@ public class GFALasServiceUT extends BaseTestCaseUT{
         gfaPwdTtItemResponse.setPriority("first");
         gfaPwdTtItemResponse.setNotes("test");
         gfaPwdTtItemResponse.setRequestDate(new Date());
-        gfaPwdTtItemResponse.setRequestTime(new Time(new Long(10)));
+        gfaPwdTtItemResponse.setRequestTime(new Time(Long.valueOf(10)));
         gfaPwdTtItemResponse.setErrorCode("test");
         gfaPwdTtItemResponse.setErrorNote("test");
         GFAPwdDsItemResponse gfaPwdDsItemResponse = new GFAPwdDsItemResponse();
